prevent double-tap on mobile (because of hover)

--- a/source/stylesheets/_team.scss
+++ b/source/stylesheets/_team.scss
@@ -17,10 +17,15 @@
     padding: 20px;
     text-align: center;
     margin-bottom: 6px;
-  }
+    &:active {
+      opacity: 1;
+    }
 
-  &:hover .hover {
-    opacity: 1;
+    @media (hover) {
+      &:hover {
+        opacity: 1;
+      }
+    }
   }
 }
 
